[package]
name = "arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
image = "0.24.7"
noise = "0.8.2"
rayon = "1.8.0"
serde_json = "1.0.112"
serde = { version = "1.0.196", features = ["derive"] }
winnow = "0.5.35"
