[package]
name = "arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"
image = "0.25.0"
noise = "0.9.0"
rayon = "1.8.0"
serde_json = "1.0.112"
serde = { version = "1.0.196", features = ["derive"] }
# winnow = {version ="0.5.39", features = ["debug"]}
winnow = "0.6.5"
wassily = "0.1.0"
pretty = "0.12.3"
