[package]
name = "arrow"
version = "0.1.0"
edition = "2021"
default-run = "arrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"
image = "0.25.0"
noise = "0.9.0"
rayon = "1.8.0"
serde_json = "1.0.112"
serde = { version = "1.0.196", features = ["derive"] }
wassily = "0.1.0"
pretty = "0.12.3"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
rhai = {version = "1.18.0",   features = ["f32_float", "sync"]}

[[bin]]
name = "arrow"
path = "src/main.rs"

[[bin]]
name = "sdf_gen"
path = "src/sdf_gen.rs"
